--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
             <ul>
                 <li>
                     <img class="contact-logo" src="./assets/Localizacion.png" alt="icono Localizacion"/>
-                    <h3><b>Calle:</b> Panamericana 8333</h3>
+                    <h3><b>Calle:</b> Guanacache 1218</h3>
                 </li>
                 <li>
                     <img class="contact-logo" src="./assets/mail.png" alt="mail"/>
-                    <h3><b>mail:</b> maronjuan1982@gmail.com</h3>
+                    <h3><b>mail:</b> dplaninsek181185@gmail.com</h3>
                 </li>
                 <li>
                     <img class="contact-logo" src="./assets/telefono.png" alt="telefono">
-                    <h3><b>Telefono:</b> 2613905987</h3>
+                    <h3><b>Telefono:</b> 2612051519</h3>
                 </li>
             </ul>
         </div>
@@ -136,13 +136,13 @@
         <h2> Nuestras Redes</h2>
         <ul>
             <li>
-                <img class="contact-logo" src="./assets/facebook.png" alt="Facebook"/><h3><b>Calle:</b> Panamericana 8333</h3>
+                <img class="contact-logo" src="./assets/facebook.png" alt="Facebook"/><h3><b>Calle:</b>davidcabj@hotmail.cebtramos</h3>
             </li>
           <li>
-            <img class="contact-logo" src="./assets/Tider.jpg" alt="Tinder"/><h3><b>mail:</b> maronjuan1982@gmail.com</h3>
+            <img class="contact-logo" src="./assets/Tider.jpg" alt="Tinder"/><h3><b>mail:</b> @dplaninsek</h3>
           </li>
           <li>
-            <img class="contact-logo" src="./assets/twiter.png" alt="icono twiter"/><h3><b>Telefono:</b> 2613905987</h3>
+            <img class="contact-logo" src="./assets/twiter.png" alt="icono twiter"/><h3><b>Telefono:</b> @dplaninsek</h3>
         </li>
         </ul>
       </div>
